--- a/positional_encoding.ipynb
+++ b/positional_encoding.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNULqgvgm9ublqO2Knhkz2L",
+      "authorship_tag": "ABX9TyOljTKLpEU4uC6owRdQgVj8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,21 @@
         "# Example usage\n",
         "pos_encoding = positional_encoding(pos=3, d_model=512)\n",
         "print(\"Positional Encoding Shape:\", pos_encoding.shape)\n",
-        "print(\"Positional Encoding Vector:\", pos_encoding)\n"
+        "print(\"Positional Encoding Vector:\", pos_encoding)\n",
+        "\n",
+        "paragraph = \"This is the first sentence. Here is the second sentence. This is the third sentence.\"\n",
+        "words = paragraph.split()\n",
+        "# Positional encoding for the 15th word in the paragraph\n",
+        "pos_encoding_15 = positional_encoding(15, d_model=512)\n",
+        "print(\"Positional Encoding for the 15th Word:\", pos_encoding_15)\n",
+        "\n",
+        "\n",
+        "sentences = paragraph.split('.')\n",
+        "words_sentence_2 = sentences[1].strip().split()\n",
+        "# Positional encoding for the 15th word in the second sentence\n",
+        "pos_encoding_1_in_sentence = positional_encoding(1, d_model=512) if len(words_sentence_2) >= 3 else None\n",
+        "print(\"Positional Encoding for the 1st Word in the Second Sentence:\", pos_encoding_1_in_sentence)\n",
+        "\n"
       ]
     }
   ]
