--- a/positional_encoding.ipynb
+++ b/positional_encoding.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOljTKLpEU4uC6owRdQgVj8",
+      "authorship_tag": "ABX9TyOcw5zhas1v8ecnDcxP+eHY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,7 @@
       "outputs": [],
       "source": [
         "import numpy as np\n",
+        "from matplotlib import pyplot as plt\n",
         "\n",
         "def positional_encoding(pos, d_model):\n",
         "    \"\"\"\n",
@@ -77,8 +78,37 @@
         "# Positional encoding for the 15th word in the second sentence\n",
         "pos_encoding_1_in_sentence = positional_encoding(1, d_model=512) if len(words_sentence_2) >= 3 else None\n",
         "print(\"Positional Encoding for the 1st Word in the Second Sentence:\", pos_encoding_1_in_sentence)\n",
+        "\n",
+        "\n",
+        "diff = np.diff(pos_encoding_1_in_sentence)\n",
+        "\n",
+        "# Check if all differences are less than zero\n",
+        "is_decreasing = np.all(diff >= 0)\n",
+        "\n",
+        "print(is_decreasing)  # Output: True if all elements are decreasing, False otherwise\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_64 = np.arange(0, 64)\n",
+        "plt.style.use('fivethirtyeight')\n",
+        "pos_encoding_2 = positional_encoding(2, d_model=64)\n",
+        "pos_encoding_4 = positional_encoding(3, d_model=64)\n",
+        "plt.xlim(0, 74)\n",
+        "plt.plot(x_64, pos_encoding_2)\n",
+        "plt.plot(x_64, pos_encoding_4, color='red')\n",
+        "plt.xlabel('Position')\n",
+        "plt.ylabel('Positional Encoding')\n",
+        "plt.title('Positional Encoding for d_model=64')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "hd6vkSarnvZ5"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
